--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,7 @@ jobs:
           command: |
             ls -ltr
             /usr/bin/python3.12 telegram_group_snippet/tele_group.py
+            /usr/bin/python3.12 postgres_connect/postgres.py
       - run:
           name: System date
           command: |
@@ -36,7 +37,7 @@ workflows:
       - build
     triggers:
       - schedule:
-          cron: "12 18 * * *"
+          cron: "20 18 * * *"
           filters:
             branches:
               only:
